feat: refreshCamo 일부 수정

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "refresh-your-readme-img",
+  "main": "script/refreshCamo.js",
+  "type": "module",
   "scripts": {
     "refreshCamo": "node script/refreshCamo.js"
   },
